tests/snapshots/snapshot_tests__snapshot_get_session_response@get_session.snap
---
source: tests/snapshot_tests.rs
assertion_line: 157
expression: redact(&body)
---
session:
  createdAt: "[timestamp]"
  expiresAt: "[timestamp]"
  id: "[uuid]"
  ipAddress: ""
  token: "[session_token]"
  updatedAt: "[timestamp]"
  userAgent: ~
  userId: "[uuid]"
user:
  createdAt: "[timestamp]"
  email: session_snap@example.com
  emailVerified: false
  id: "[uuid]"
  image: ~
  name: Session Snap
  updatedAt: "[timestamp]"
