tests/snapshots/snapshot_tests__snapshot_list_sessions_response@list_sessions.snap
---
source: tests/snapshot_tests.rs
assertion_line: 177
expression: redact(&body)
---
- createdAt: "[timestamp]"
  expiresAt: "[timestamp]"
  id: "[uuid]"
  ipAddress: ""
  token: "[session_token]"
  updatedAt: "[timestamp]"
  userAgent: ~
  userId: "[uuid]"
